Incorporated CV changes and JL work

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,8 +1,9 @@
 navbar {
 display:grid;
 grid-template-columns: repeat(10,1fr);
-background-color: #C4C4C4;
-border: 5px solid #457B9D;
+// background-color: #C4C4C4;
+border: 5px solid;
+//  #457B9D;
 .logo {
     height:100px;
     width:250px;
