--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -31,7 +31,7 @@ border: 5px solid;
 }
 .profileBtn{
     grid-column:9/11;
-    background-color: #457B9D;
+    // background-color: #457B9D;
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight:300;
