--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -2,7 +2,7 @@ navbar {
 display:grid;
 grid-template-columns: repeat(10,1fr);
 // background-color: #C4C4C4;
-border: 5px solid;
+border: 2px solid #457B9D;
 //  #457B9D;
 .logo {
     height:100px;
@@ -22,12 +22,6 @@ border: 5px solid;
     display:flex;
     justify-content: center;
     align-items: center;
-}
-.homeBtn {
-    grid-column: 7;
-}
-.closedAppraisalsBtn {
-    grid-column: 8;
 }
 .profileBtn{
     grid-column:9/11;
@@ -64,7 +58,7 @@ border: 5px solid;
     z-index: 1;
     background-color: black;
     width: 100%;
-    height:100px;
+    height:150px;
     justify-self: center;
     text-align: center;
 }
@@ -74,7 +68,7 @@ border: 5px solid;
 .list{
     display:grid;
     grid-column: 1fr,3fr;
-    grid-row: 1fr,1fr;
+    grid-row: repeat(3, 1fr);
     justify-items:center;
     height:100%;
 
@@ -92,16 +86,33 @@ border: 5px solid;
     text-align: center;
     align-self: center;
 }
-.logout{
+
+.closedAppraisals {
     width:20px;
     height:20px;
     grid-row: 2;
     grid-column: 1;
     display: flex;
+    align-self: center;
+}
+.closedAppraisalsText {
+    grid-row: 2;
+    grid-column: 2;
+    justify-items:center;
+    text-align: center;
+    align-self: center;
+}
+
+.logout{
+    width:20px;
+    height:20px;
+    grid-row: 3;
+    grid-column: 1;
+    display: flex;
     align-self:center;
 }
 .logoutText {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 2;
     justify-items: center;
     text-align: center;
