--- a/src/components/QuestionBank/QuestionBank.module.scss
+++ b/src/components/QuestionBank/QuestionBank.module.scss
@@ -2,7 +2,7 @@
     
     .attitude {
         display: grid;
-        grid-template-rows: repeat(3,1fr);
+        grid-template-rows: repeat(3, 1fr);
         label {
             grid-row: 1;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -10,11 +10,9 @@
             font-size:30px;
             text-align: center;
             margin-top: 25px;
-
         }
         select {
             grid-row: 2;
-            background-color: white;
             height:37px;
             width:457px;
             justify-self: center;
@@ -30,7 +28,7 @@
 
     .customer {
         display: grid;
-        grid-template-rows: repeat(3,1fr);
+        grid-template-rows: repeat(3, 1fr);
         label {
             grid-row: 1;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -42,7 +40,7 @@
         }
         select {
             grid-row: 2;
-            background-color: white;
+            // background-color: white;
             height:37px;
             width:457px;
             justify-self: center;
