--- a/src/components/QuestionBank/QuestionBank.module.scss
+++ b/src/components/QuestionBank/QuestionBank.module.scss
@@ -1,6 +1,6 @@
 .QuestionBank {
     
-    .attitude {
+    .questionBlock {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         label {
@@ -21,151 +21,14 @@
         button {
             grid-row: 3;
             height:37px;
-            width:457px;
+            width:100px;
             justify-self: center;
         }
     }
 
-    .customer {
-        display: grid;
-        grid-template-rows: repeat(3, 1fr);
-        label {
-            grid-row: 1;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-weight: 300;
-            font-size:30px;
-            text-align: center;
-            margin-top: 25px;
-
-        }
-        select {
-            grid-row: 2;
-            // background-color: white;
-            height:37px;
-            width:457px;
-            justify-self: center;
-            margin-top:10px;
-        }
-        button {
-            grid-row: 3;
-            height:37px;
-            width:457px;
-            justify-self: center;
-        }
-    }
-
-    .managerial {
-        display: grid;
-        grid-template-rows: repeat(3,1fr);
-        label {
-            grid-row: 1;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-weight: 300;
-            font-size:30px;
-            text-align: center;
-            margin-top: 25px;
-
-        }
-        select {
-            grid-row: 2;
-            background-color: white;
-            height:37px;
-            width:457px;
-            justify-self: center;
-            margin-top:10px;
-        }
-        button {
-            grid-row: 3;
-            height:37px;
-            width:457px;
-            justify-self: center;
-        }
-    }
-    .engagement {
-        display: grid;
-        grid-template-rows: repeat(3,1fr);
-        label {
-            grid-row: 1;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-weight: 300;
-            font-size:30px;
-            text-align: center;
-            margin-top: 25px;
-
-        }
-        select {
-            grid-row: 2;
-            background-color: white;
-            height:37px;
-            width:457px;
-            justify-self: center;
-            margin-top:10px;
-        }
-        button {
-            grid-row: 3;
-            height:37px;
-            width:457px;
-            justify-self: center;
-        }
-    }
-    .performance {
-        display: grid;
-        grid-template-rows: repeat(3,1fr);
-        label {
-            grid-row: 1;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-weight: 300;
-            font-size:30px;
-            text-align: center;
-            margin-top: 25px;
-
-        }
-        select {
-            grid-row: 2;
-            background-color: white;
-            height:37px;
-            width:457px;
-            justify-self: center;
-            margin-top:10px;
-        }
-        button {
-            grid-row: 3;
-            height:37px;
-            width:457px;
-            justify-self: center;
-        }
-    }
-    .openended {
-        display: grid;
-        grid-template-rows: repeat(3,1fr);
-        label {
-            grid-row: 1;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-weight: 300;
-            font-size:30px;
-            text-align: center;
-            margin-top: 25px;
-
-        }
-        select {
-            grid-row: 2;
-            background-color: white;
-            height:37px;
-            width:457px;
-            justify-self: center;
-            margin-top:10px;
-        }
-        button {
-            grid-row: 3;
-            height:37px;
-            width:457px;
-            justify-self: center;
-        }
-    }
     .ownquestion {
         display: grid;
         grid-template-rows: repeat(4,1fr);
-
 
         .ownQuestionLabel {
             grid-row: 1;
@@ -174,12 +37,9 @@
             font-size:30px;
             text-align: center;
             margin-top: 25px;
-
         }
-    
         select {
             grid-row: 2;
-           
             background-color: white;
             height:37px;
             width:457px;
@@ -187,9 +47,10 @@
             margin-top:10px;
         }
         .inputtext {
+            border: none;
             grid-row: 3;
             height:37px;
-            width:457px;
+            width:450px;
             justify-self: center;
         }
         .submitownquestion {
@@ -200,7 +61,6 @@
         }
     }
 
-
     .buildFormContainer {
         margin-top: 50px;
         margin-bottom: 50px;
@@ -208,16 +68,12 @@
         justify-content: center;
 
           .buildForm {
-            border: 4px solid rgb(2, 4, 73);
             height:50px;
-            width:500px;
+            width:200px;
             justify-self: center;
-            background-color: #457B9D;
-            font-weight:800;
+            font-weight: 500;
             font-size:large;
         }
-        
-
     }
   
 }
