--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,9 +1,7 @@
 navbar {
 display:grid;
 grid-template-columns: repeat(10,1fr);
-// background-color: #C4C4C4;
-border: 2px solid #457B9D;
-//  #457B9D;
+border-bottom: 2px solid #457B9D;
 .logo {
     height:100px;
     width:250px;
