--- a/src/components/GeneratedForm/GeneratedForm.module.scss
+++ b/src/components/GeneratedForm/GeneratedForm.module.scss
@@ -60,17 +60,14 @@
 }
 
 .submitFormButton{
-    border: 2px solid grey;
-    border-radius: 5px;
-    height: 50px;
-    width: 500px;
+    border: 2px solid;
+    height: 35px;
+    width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #457B9D;
-    color: white;
     font-weight:600;
-    font-size: large;
-    margin: 45px 0 75px;
+    font-size: 20px;
+    margin: 25px 0 75px;
 }
 }
