Bit more styling

--- a/src/components/GeneratedForm/GeneratedForm.module.scss
+++ b/src/components/GeneratedForm/GeneratedForm.module.scss
@@ -32,7 +32,7 @@
         display: flex;
         align-items: center;
         width: 75%;
-        border-bottom: 4px solid #457B9D;
+        // border-bottom: 4px solid #457B9D;
         font-size: 40px;
         margin: 0px;
         margin-bottom: 20px;
