--- a/src/components/CATable/CATable.module.scss
+++ b/src/components/CATable/CATable.module.scss
@@ -212,4 +212,156 @@
         border-bottom:2px solid black;
     }
 }
+.compare{
+    font-size:30px;
+}
+.yearCompare{
+    size:30px;
+}
+.barChart {
+    display:grid;
+    grid-template-rows: repeat(12,1fr);
+    grid-template-columns: 1fr, 2fr, 2fr, 1fr;
+
+    .BCHeading1{
+        grid-row:1/3;
+        grid-column: 1;
+    }
+    .BCHeading2{
+        grid-row:4/6;
+        grid-column: 1;
+    }
+    .BCHeading3{
+        grid-row:7/9;
+        grid-column: 1;
+    }
+    .BCHeading4{
+        grid-row:10/12;
+        grid-column: 1;
+    }
+
+    .BCYear1 {
+        grid-row:1;
+        grid-column: 2/3;
+
+        .bar1{
+            width:60%;
+            background-color: green;
+            color:black;
+        }
+        .freespace1{
+            width:40%;
+        }
+    }
+    .BCYear2 {
+        grid-row:2;
+        grid-column: 2/3;
+
+        .bar2{
+            width:50%;
+            background-color: orange;
+            color:black;
+        }
+        .freespace2{
+            width:50%;
+        }
+    }
+    .BCYear3 {
+        grid-row:4;
+        grid-column: 2/3;
+
+        .bar3{
+            width:90%;
+            background-color: green;
+            color:black;
+        }
+        .freespace3{
+            width:10%;
+        }
+    }
+    .BCYear4 {
+        grid-row:5;
+        grid-column: 2/3;
+
+        .bar4{
+            width:80%;
+            background-color: orange;
+            color:black;
+        }
+        .freespace4{
+            width:20%;
+        }
+    }
+    .BCYear5 {
+        grid-row:7;
+        grid-column: 2/3;
+
+        .bar5{
+            width:2%;
+            background-color: green;
+            color:black;
+        }
+        .freespace5{
+            width:98%;
+        }
+    }
+    .BCYear6 {
+        grid-row:8;
+        grid-column: 2/3;
+
+        .bar6{
+            width:5%;
+            background-color: orange;
+            color:black;
+        }
+        .freespace6{
+            width:95%;
+        }
+    }
+
+    .underperform1{
+        font-size:60px;
+        font-weight:600px;
+        grid-row:10/12;
+        grid-column: 2;
+    }
+    .underperform2{
+        grid-row:12;
+        grid-column: 2;
+    }
+    .underperform3{
+        font-size:60px;
+        font-weight:600px;
+        grid-row:10/12;
+        grid-column:3;
+    }
+    .underperform4{
+        grid-row:12;
+        grid-column:3;
+    }
+    .BCpercent1{
+        grid-row:1;
+        grid-column: 4;
+    }
+    .BCpercent2{
+        grid-row:2;
+        grid-column: 4;
+    }
+    .BCpercent3{
+        grid-row:4;
+        grid-column: 4;
+    }
+    .BCpercent4{
+        grid-row:5;
+        grid-column: 4;
+    }
+    .BCpercent5{
+        grid-row:7;
+        grid-column: 4;
+    }
+    .BCpercent6{
+        grid-row:8;
+        grid-column: 4;
+    }
+}
 
